# mc_kinematics_calibration_controller

./: .envrc  .gitignore  .nvim.lua  CMakeLists.txt  display.rviz  mc_rtc.yaml
data/panda_femur/back_left/: hole_0.csv  hole_1.csv
data/panda_femur/back_right/: hole_0.csv  hole_1.csv
data/panda_femur/center/: hole_0.csv  hole_1.csv
data/panda_femur/front_center/: hole_0.csv  hole_1.csv
data/panda_femur/front_left/: hole_0.csv  hole_1.csv
data/panda_femur/front_right/: hole_0.csv  hole_1.csv
data/panda_tibia/back_left/: hole_0.csv  hole_1.csv
data/panda_tibia/back_right/: hole_0.csv
data/panda_tibia/center/: hole_0.csv  hole_1.csv
data/panda_tibia/front_center/: hole_0.csv  hole_1.csv
data/panda_tibia/front_left/: hole_0.csv  hole_1.csv
data/panda_tibia/front_right/: hole_0.csv  hole_1.csv
etc/: KinematicsCalibrationController.in.yaml
etc/controllers/KinematicsCalibrationController/: panda.yaml
src/: CMakeLists.txt  KinematicsCalibrationController.cpp  KinematicsCalibrationController.h  api.h  lib.cpp
src/states/: CMakeLists.txt  KinematicsCalibrationController_Initial.cpp  KinematicsCalibrationController_Initial.h
